2005-10-18 Mikhail Khodjaiants
	Bug 106632: Invalid detail value for arrays with dimension greater than 100.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Variable.java

2005-10-18 Mikhail Khodjaiants
	Bug 111568: Fix for corrupt stack messages not working.
	Applied patch from Timesys.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Thread.java

2005-09-01 Mikhail Khodjaiants
	Bug 108424: Debugger stops on removed breakpoints.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java

2005-08-31 Alain Magloire
	Fix Pr 107571:  Do not create the Console pipe is we
	have no consumer.
	* mi/org/eclipse/cdt/debug/mi/core/MISession.java

2005-08-26 Mikhail Khodjaiants
	Bug 108130: wrong type shown on breakpoint view for R watchpoint created from gdb console.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java

2005-07-28 Alain Magloire
	Fix Pr 104421: The register did not update.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/RegisterManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Register.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/StackFrame.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Thread.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Value.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Variable.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/VariableDescriptor.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/type/ArrayValue.java

2005-07-26 Alain Magloire
	Fix for 92446
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/VariableManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Value.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Variable.java

2005-07-21 Alain Magloire
	Fix for PR 103193
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/LocationBreakpoint.java
	* src/org/eclipse/cdt/debug/mi/core/MIPlugin.java

2005-07-18 Alain Magloire
	GDB has now four different version of MI, so it has become